--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,10 @@
 fastapi
-uvicorn[standard]
+uvicorn
 scikit-learn
-textblob
-numpy
-python-multipart
-pydantic
 spacy
-nltk
 textblob
+nltk
+text2emotion
+pandas
+reportlab
+numpy
